@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 3.4
+Version: 3.5
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, widget areas on homepage, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description, full width page template, dropdown navigation. Enjoy. 
@@ -188,7 +188,7 @@ select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist;}
 
 /* HEADER THIRD SEARCH BAR INPUTS */
 #header-third input {padding:5px; background:#fff; color:#333;}
-#header-third input[type="submit"]{padding:5px; background:#fff; color:#333;}
+#header-third input[type="submit"] {padding:5px; background:#fff; color:#333;}
 #header-third input[type="submit"]:hover {background:#333; color:#fff;}
 
 
@@ -252,10 +252,9 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .wp-caption {max-width:100%;}
 .wp-caption-text {text-align:center;}
 
+.gallery img {border:0 !important;}
 .gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
 .gallery-caption {max-width:100%; text-align:center;}
-
-#container .gallery img {border:0;}
 
 
 /* SEARCHFORM */
